--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Portfolio Landing Page</title>
+  <title>Landing Page</title>
   <!----CSS link----->
   <link rel="stylesheet" href="assets/style.css" />
   <link rel="stylesheet" href="assets/responsive.css" />
